# ucr-chatbot-pathway-program

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  GOOGLE_OAUTH.md  README.md  docker-compose.yaml  pyproject.toml  review_code.py  tatus  test_orm.py
.github/workflows/: code-review.yml
project-plan/: README.md  data-model.drawio  student-interaction.drawio  web-endpoints.drawio
tests/: conftest.py  test_factory.py
tests/api/: test_api_routes.py
tests/api/embedding/: embedding.py  test_embedding.py
tests/api/language_model/: test_response.py
tests/db/: helper_functions.py  test_cli.py  test_db.py
tests/file_parser/: test_file.py
tests/file_parser/test_files/: test.md
tests/public/: test_routes.py
tests/web_interface/: test_web_interface_routes.py
ucr_chatbot/: __init__.py  __main__.py  config.py  decorators.py  secret.py
ucr_chatbot/api/: __init__.py  routes.py  summary_generation.py
ucr_chatbot/api/context_retrieval/: __init__.py  document.py  retriever.py
ucr_chatbot/api/embedding/: __init__.py  embedding.py
ucr_chatbot/db/: __main__.py  cli.py  migration_add_redirected_column.py  migration_add_resolved_column.py  models.py
ucr_chatbot/public/: routes.py
ucr_chatbot/static/: assistant.css  assistant.js  conversation.css  conversation.js  landing_page.css
ucr_chatbot/static/css/: assistant.css  (+7 more)
ucr_chatbot/templates/: assistant.html  assistant_conversation.html  assistant_dashboard.html  base.html  conversation.css  conversation.html  conversation.js  documents.html  index.html  landing_page.css  landing_page.html
ucr_chatbot/web_interface/: __init__.py  assistant_routes.py  authentication_routes.py  conversation_routes.py  general_routes.py  instructor_routes.py  routes.py
(+9 files in other folders)
