[project]
name = "ucr_chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.9.1",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "pypdf>=5.7.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "sphinx>=8.2.3",
    "sqlalchemy>=2.0.41",
    "tabulate>=0.9.0",
    "typing>=3.10.0.0",
    "pyright>=1.1.402",
    "speechrecognition>=3.14.3",
    "pydub>=0.25.1",
    "google-generativeai>=0.8.5",
    "ollama>=0.5.1",
    "werkzeug>=3.1.3",
]

[tool.setuptools.packages.find]
include = [
    "ucr_chatbot*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ucr_chatbot"]

[tool.pyright]
typeCheckingMode = "strict"
include = [
    "ucr_chatbot",
]

[tool.ruff]
include = [
    "ucr_chatbot/**.py"
]

[tool.ruff.lint]
select = [
    "D101",
    "D102",
    "D103",
    "D105",
    "N",
    "F"
]
